--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "first app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node app.js"
+},
   "dependencies": {
     "express": "^4.13.3"
   },
