--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "express": "^4.13.3"
   },
+  "dependencies": {
+    "geoip-lite": "^4.13.3"
+},
   "engines": {
     "node": "4.0.0"
 },
