--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
 },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
     "geoip-lite": "^1.2.0"
 },
   "engines": {
